<resources>
    <string name="app_name">AdminAppV2</string>
    <string name="login">LOGIN</string>
    <string name="selectProgram">Select Program</string>
    <string name="qrscan">Scan QR</string>
    <string name="read_india">Read India</string>
    <string name="hybrid_learning">Hybrid Learning</string>
    <string name="second_chance">Second Chance</string>
    <string name="ECE">ECE</string>
    <string name="pratham_institute">Pratham Institute</string>
    <string name="urbon_program">Urban programme</string>
    <string name="hamara_gaon">Hamara Gaon</string>
    <string name="government_Partnership">Government Partnership</string>
    <string name="KGBV">KGBV</string>
    <string name="DigitalSchoolProgram">Digital School Program</string>
    <string name="ReadIndiaMichelin">Read India- Michelin</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_forms">Forms</string>
    <string name="title_StudentMngmnt">Student Management</string>
    <string name="title_MngDevice">Manage Device</string>
    <string name="title_notification">Notifications</string>
    <string name="program">Program :</string>
    <string name="state">State :</string>
    <string-array name="village">
        <item>SELECT VILLAGE</item>
    </string-array>
    <string name="hnt_username">User Name</string>
    <string name="hnt_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_cleardata">Clear Data</string>
    <string name="forms">Forms</string>
    <string name="studentManagement">Student Management</string>
    <string name="pushdata">Push Data</string>
    <string name="managedevice">Manage Device</string>
    <string name="notifications">Notifications</string>
    <string name="deviceinfo">Device Info</string>
    <string name="coachinformation">Coach Information</string>
    <string name="coursecompletion">Course Completion</string>
    <string name="coachretention">Coach Retention</string>
    <string name="groupsession">Group Session</string>
    <string name="groupvisit">Group Visit</string>
    <string name="courseenrollment">Course Enrollment</string>
    <string name="studentsattendance">Students Attendance</string>
    <string name="addnewgroup">Add New Group</string>
    <string name="addnewstudent">Add New Student</string>
    <string name="editstudent">Edit Student</string>
    <string name="deletestudent">Delete Student</string>
    <string name="swapstudents">Swap Students</string>
    <string name="eceassessment">ECE Assessment</string>
    <string name="assigntablet">Assign Tablet</string>
    <string name="returntablet">Return Tablet</string>
    <string name="actionstatus">Action Status</string>
    <string name="mydevices">My Devices</string>
    <string name="scanprathamid">Scan Pratham ID</string>
    <string name="replacetab">Replace Tablet</string>
    <string name="collecttab">Collect Tablet</string>
    <string name="newgroupname">enter new group name</string>
    <string name="enterfirstname">Enter First Name</string>
    <string name="entermiddlename">Enter Middle Name</string>
    <string name="enterlastname">Enter Last Name</string>
    <string name="enterMoNumber">Enter Mobile number</string>
    <string name="birthdate">BirthDate</string>
    <string name="clas">Class</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enterguardianname">Enter Guardian\'s Name</string>
    <string name="schooltype">School Type</string>
    <string name="select_birth">Select \n birth date</string>
    <string name="government">Government</string>
    <string name="privat">Private</string>
    <string name="baselineinfo">Baseline Information &#8212;&#8212;></string>
    <string name="endline1">ENDLINE 1</string>
    <string name="endline2">ENDLINE 2</string>
    <string name="endline3">ENDLINE 3</string>
    <string name="endline4">ENDLINE 4</string>
    <string name="selectstudent">Select Student</string>
    <string name="studentdetail">STUDENT DETAILS</string>
    <string name="firstname">First Name</string>
    <string name="middlename">Middle Name</string>
    <string name="lastname">Last Name</string>
    <string name="age">Age</string>
    <string name="selectassesssmenttype">Select Assessment Type</string>
    <string name="basicdetails">BASIC DETAILS</string>
    <string name="selectdate">Select Date</string>
    <string name="selecttime">Select Time</string>
    <string name="activities">ACTIVITIES</string>
    <string name="worksheet">WORKSHEET</string>
    <string name="oralquestions">ORAL QUESTIONS</string>
    <string name="title_attendance">Attendance</string>
    <string name="selectall">Select All</string>
    <string name="deselectall">Deselect All</string>
    <string name="present">Present</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="selectgroupssmall">Select Groups</string>
    <string name="selectstudents">Select Students</string>
    <string name="selectedstudents">Selected Student :&#160;</string>
    <string name="prsnt">Present :&#160;</string>
    <string name="title_coachInfo">Coach Information</string>
    <string name="nameofcoach">Name of the coach</string>
    <string name="selectoccupation">Select Occupation</string>
    <string name="selecteducation">Select Education</string>
    <string name="selectspeciality">Select Speciality</string>
    <string name="selectsubjectexpert">Select Subject Expert</string>
    <string name="coachname">Coach Name :&#160;</string>
    <string name="coachage">Coach Age :&#160;</string>
    <string name="coachgender">Coach Gender :&#160;</string>
    <string name="coachoccupation">Coach Occupation :&#160;</string>
    <string name="coacheducation">Coach Education :&#160;</string>
    <string name="coachspeciality">Coach Speciality :&#160;</string>
    <string name="subjectexpert">Subject Expert :&#160;</string>
    <string name="selectedgroup">Selected Groups :&#160;</string>
    <string name="date">Date :&#160;</string>
    <string name="select">Select</string>
    <string name="plzmentionOther">Please Mention Others</string>
    <string name="Okay">OK</string>
    <string name="Skip">SKIP</string>
    <string name="lodingPleaseWait">Loading Please Wait&#8230;</string>
    <string name="Exit">Exit</string>
    <string name="Cancel">Cancel</string>
    <string name="sp_clas5">Class 5</string>
    <string name="sp_clas8">Class 8</string>
    <string name="sp_highSec">Higher Secondary</string>
    <string name="sp_intmd">Intermediate</string>
    <string name="sp_grad">Graduate</string>
    <string name="sp_postgrad">Post Graduate</string>
    <string name="title_coachcmpltn">Coach Completion</string>
    <string name="nocoursesavailable">No Courses/Topics Available !!!</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="wasitevent">Was it an Event ?</string>
    <string name="noofparents">No. of parents present</string>
    <string name="villagename">Village Name :&#160;</string>
    <string name="groupname">Group Name :&#160;</string>
    <string name="courses">Courses :&#160;</string>
    <string name="topics">Topics :&#160;</string>
    <string name="stdate">Start Date :&#160;</string>
    <string name="eddate">End Date :&#160;</string>
    <string name="event">Event :&#160;</string>
    <string name="parentpresent">No of Parents Present :&#160;</string>
    <string name="title_coachRetentn">Coach Retention</string>
    <string name="dropout">Drop Out</string>
    <string name="selectcoach">Select Coach</string>
    <string name="drpout">Drop Out :&#160;</string>
    <string name="title_groupVisit">Group Visit</string>
    <string name="title_groupSession">Group Session</string>
    <string name="selectvisitedgrp">Select Visited Groups</string>
    <string name="helpingcoaches">Select the coaches who were helping their group at their allotted time</string>
    <string name="workcrosschk">Groups whose work was crosschecked by Coach</string>
    <string name="studentspresent">No. of students present </string>
    <string name="datevisited">Date Visited :&#160;</string>
    <string name="observedgrp">Observed Group :&#160;</string>
    <string name="studyinggrp">Groups which were studying at their allotted time</string>
    <string name="title_courseEnrlmnt">Coach Enrollment</string>
    <string name="selecttopics">Select Topics</string>
    <string name="communityorschool">Community or School</string>
    <string name="community">Community</string>
    <string name="school">School</string>
    <string name="selectedcourses">Selected Courses :&#160;</string>
    <string name="selectedtopics">Selected Topics :&#160;</string>
    <string name="groupType">Group Type :&#160;</string>
    <string name="marital_status">Marital Status</string>
    <string name="married">Married</string>
    <string name="unmarried">Unmarried</string>
    <string name="enterphone">Enter Phone No.</string>
    <string name="rustudy">Are you Studying?</string>
    <string name="haveSmartphone">Does anyone in your family have smartphone?</string>
    <string name="useSmartphone">Do you use that smartphone?</string>
    <string name="wantCourse">I want to join this course: </string>
    <string name="personalandcomm">Personal and Community Health Management Part 1</string>
    <string name="englishSpeak">English Speaking</string>
    <string name="addyouth">Add Youth</string>
    <string name="addnewyouth">Add New Youth</string>
    <string name="oops">Oops, Something went wrong!!</string>
    <string name="sorryabtthat">Sorry about that. Press the register report button to send us the error.</string>
    <string name="registerreport">Register Report</string>
    <string name="selectstate">Select State</string>
    <string name="selectprogram">Select Program</string>
    <string name="selectblock">Select Block</string>
    <string name="selectvillage">Select Village</string>
    <string name="selectgroup">Select Group</string>
    <string name="selectgroups">SELECT GROUPS</string>
    <string name="submit">SUBMIT</string>
    <string name="clear">CLEAR</string>
    <string name="preview">PREVIEW</string>
    <string name="savechanges">SAVE CHANGES</string>
    <string name="formdatapreview">Form Data Preview</string>
    <string name="pulling">Pulling&#160;</string>
    <string name="pullingCoaches">Pulling Coaches.</string>
    <string name="pullingCourses">Pulling Courses.</string>
    <string name="pullingCoursesCmpl">Pulling Course Completion.</string>
    <string name="loadApiFail">Load API Failed.</string>
    <string name="pulldata">Pull Data</string>
    <string name="savedata">Save Data</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="accept">Accept</string>
    <string name="close">Close</string>
    <string name="plzselectprogram">Please Select Program</string>
    <string name="plzselectvlg">Please Select Village</string>
    <string name="attendance">Attendance :&#160;</string>
    <string name="coaches">Coaches :&#160;</string>
    <string name="communities">Communities :&#160;</string>
    <string name="completions">Completions :&#160;</string>
    <string name="students">Students :&#160;</string>
    <string name="asers">Asers :&#160;</string>
    <string name="groups">Groups :&#160;</string>
    <string name="groupvst">GroupVisits :&#160;</string>
    <string name="groupsesn">GroupSessions :&#160;</string>
    <string name="eceasmnt">ECE Assessments :&#160;</string>
    <string name="youths">Youths :&#160;</string>
    <string name="logs">Logs :&#160;</string>
    <string name="uploadChange">Do You Want To Upload Following Changes?</string>
    <string name="totalStudents">Total Students :&#160;</string>
    <string name="totalchanges">Total Changes :&#160;</string>
</resources>