<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".forms.CourseCompletionForm">

        <!--Title-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@drawable/custom_border"
            android:fontFamily="monospace"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/title_coachcmpltn"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:background="@drawable/custom_border"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <!--Village-->
                <Spinner
                    android:id="@+id/sp_Village"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12sdp" />

                <!--Select Group-->
                <Spinner
                    android:id="@+id/sp_Groups"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12sdp" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_Course_Warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@drawable/custom_border"
                android:drawableLeft="@drawable/ic_warning"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/nocoursesavailable"
                android:textColor="#FF0000"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:visibility="gone" />

            <!--Course,Topics, Checkbox-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/card_view_recycler_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                tools:itemCount="2"
                tools:listitem="@layout/course_topic_completion_items"
                tools:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <!--Start Date-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:text="@string/startdate"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <!--Start Date-->
                <Button
                    android:id="@+id/btn_DatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                    android:paddingLeft="@dimen/_8sdp"
                    android:text="Date"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_12sdp" />

                <!--End Date-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:text="@string/enddate"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <!--End Date-->
                <Button
                    android:id="@+id/btn_DatePickerTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                    android:paddingLeft="@dimen/_8sdp"
                    android:text="Date"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <!--Radio Button to Select Was it an event-->
                <RadioGroup
                    android:id="@+id/rg_Event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:text="@string/wasitevent"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_Yes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_8sdp"
                        android:layout_weight="1.5"
                        android:checked="true"
                        android:text="@string/yes"
                        android:textSize="@dimen/_12sdp" />

                    <RadioButton
                        android:id="@+id/rb_No"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_8sdp"
                        android:layout_weight="1.5"
                        android:text="@string/no"
                        android:textSize="@dimen/_12sdp" />

                </RadioGroup>

                <!--Parent Count-->
                <EditText
                    android:id="@+id/edt_ParentCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:hint="@string/noofparents"
                    android:inputType="number"
                    android:maxLength="2"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/preview"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>