<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FFFFFF">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:context=".forms.AttendanceForm.AttendanceForm">

        <!--Title-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/custom_border"
            android:fontFamily="monospace"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/studentsattendance"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <!--Select Groups Dynamically-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:background="@drawable/custom_border"
            android:orientation="vertical">

            <!--Village-->
            <Spinner
                android:id="@+id/sp_Village"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:textSize="@dimen/_12sdp" />

            <!--Select Groups-->
            <com.pratham.admin.custom.MultiSpinner
                android:id="@+id/sp_Groups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:paddingLeft="@dimen/_4sdp"
                android:textColor="#000000"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <!--Select Students-->
                <com.pratham.admin.custom.MultiSpinner
                    android:id="@+id/sp_Students"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/_4sdp"
                    android:textColor="#000000"
                    android:textSize="@dimen/_12sdp" />

                <Button
                    android:id="@+id/btn_SelectAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_weight="1.5"
                    android:background="@color/colorPrimaryDark"
                    android:drawableLeft="@android:drawable/checkbox_on_background"
                    android:paddingLeft="@dimen/_8sdp"
                    android:text="@string/selectall"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btn_DeselectAll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_weight="1.5"
                    android:background="@color/colorPrimaryDark"
                    android:drawableLeft="@android:drawable/checkbox_off_background"
                    android:paddingLeft="@dimen/_8sdp"
                    android:text="@string/deselectall"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_12sdp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!--Present-->
                <RadioGroup
                    android:id="@+id/rg_Present"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_weight="1"
                        android:text="@string/present"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_Yes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:checked="true"
                        android:text="@string/yes"
                        android:textSize="@dimen/_12sdp" />

                    <RadioButton
                        android:id="@+id/rb_No"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:text="@string/no"
                        android:textSize="@dimen/_12sdp" />
                </RadioGroup>


                <Button
                    android:id="@+id/btn_DatePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                    android:paddingLeft="@dimen/_8sdp"
                    android:text="Date"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/btn_Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/preview"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>